<resources>
    <!-- Landing page strings-->
    <string name="app_name">WeatherMe</string>
    <string name="weatherme">WeatherMe</string>
    <string name="location">Liopetri,Cyprus</string>
    <string name="logoDescription">logo</string>
    <string name="locationTemperature">20°C</string>
    <string name="inputHint">Enter city for weather</string>
    <string name="findButtonText">find</string>
    <string name="SignInScreenLink">Sign into account</string>
    <string name="loginlinkicon">logInLinkIcon</string>
    <string name="textLogIn">LogIn</string>
    <string name="textRegister">Register</string>
    <string name="register_message">Don\'t have an account ? Register here ...</string>
    <string name="logIn_message">Already have an account ? Log in here ...</string>
    <string name="title_activity_observations2">Observations2</string>
    <string name="sign_out">Sign out</string>
    <string name="account_icon">account_icon</string>
    <string name="finishscreen">finishScreen</string>

    <!-- Landing page strings-->
</resources>
