<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/logoSection"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homeContent"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/weatherme"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/logoIcon"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/textLogo"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logoDescription"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/homeContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoSection">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/cityCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:text="@string/location"
                android:textAlignment="center"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/cityDegrees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationTemperature"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>



        <LinearLayout
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logInScreenLink"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_bold_italic"
                android:textColor="@color/linkColor"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/account_icon"
                android:paddingStart="5dp"
                android:contentDescription="@string/loginlinkicon"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>